--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #database configs
-spring.datasource.url=jdbc:mysql://localhost:3306/produto
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=root
